<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.andronicus.med_manager.editmedication.EditMedicationFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_name"
                android:paddingLeft="8dp"
                android:inputType="textCapSentences"
                android:layout_width="match_parent"
                android:hint="@string/medication_name"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:hint="@string/description"
                android:inputType="textCapSentences"
                android:paddingLeft="8dp"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_tablets"
                android:layout_width="match_parent"
                android:hint="@string/number_of_tablets"
                android:paddingLeft="8dp"
                android:inputType="number"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
        <Spinner
            android:id="@+id/spinner_frequency"
            android:layout_marginTop="8dp"
            android:paddingLeft="5dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_reminder_1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="22sp"
            android:text="@string/set_reminder"
            android:paddingLeft="8dp"
            android:drawableLeft="@drawable/ic_action_reminder"
            android:background="@color/colorPrimary"
            android:textColor="@color/color_white"
            android:gravity="center"
            tools:text="8 : 00 AM"/>
        <TextView
            android:id="@+id/tv_reminder_2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:text="@string/set_reminder"
            android:paddingLeft="8dp"
            android:drawableLeft="@drawable/ic_action_reminder"
            android:background="@color/colorPrimary"
            android:textColor="@color/color_white"
            android:gravity="center"
            tools:text="8 : 00 AM"/>
        <TextView
            android:id="@+id/tv_reminder_3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:text="@string/set_reminder"
            android:paddingLeft="8dp"
            android:drawableLeft="@drawable/ic_action_reminder"
            android:background="@color/colorPrimary"
            android:textColor="@color/color_white"
            android:gravity="center"
            tools:text="8 : 00 AM"/>
        <TextView
            android:id="@+id/tv_reminder_4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:text="@string/set_reminder"
            android:paddingLeft="8dp"
            android:drawableLeft="@drawable/ic_action_reminder"
            android:background="@color/colorPrimary"
            android:textColor="@color/color_white"
            android:gravity="center"
            tools:text="8 : 00 AM"/>
        <TextView
            android:id="@+id/tv_reminder_5"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:textSize="22sp"
            android:text="@string/set_reminder"
            android:paddingLeft="8dp"
            android:drawableLeft="@drawable/ic_action_reminder"
            android:background="@color/colorPrimary"
            android:textColor="@color/color_white"
            android:gravity="center"
            tools:text="8 : 00 AM"/>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_start_date"
                android:layout_width="match_parent"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/start_date"
                android:paddingLeft="8dp"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_end_date"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:hint="@string/end_date"
                android:clickable="true"
                android:focusable="false"
                android:paddingLeft="8dp"
                android:layout_height="wrap_content"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</ScrollView>
