<resources>
    <string name="app_name">Med-Manager</string>
    <string name="title_activity_medication">Medication</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_edit_medication">Edit Medication</string>
    <string name="title_activity_add_medication">Add Medication</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="save">Save</string>

    <string-array name="frequencies">
        <item>Select Frequency/Interval</item>
        <item>Once a day</item>
        <item>Twice a day</item>
        <item>Thrice a day</item>
        <item>Four times a day</item>
        <item>Five times a day</item>
    </string-array>

    <string name="select_frequency">Select Frequency/Interval</string>
    <string name="once_a_day">Once a day</string>
    <string name="twice_a_day">Twice a day</string>
    <string name="thrice_a_day">Thrice a day</string>
    <string name="four_times_a_day">Four times a day</string>
    <string name="five_times_a_day">Five times a day</string>
    <string name="user_name">Name</string>
    <string name="signed_out">Signed Out</string>
    <string name="medication_name">Medication Name</string>
    <string name="description">Description</string>
    <string name="number_of_tablets">Number of tablets</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="empty_recyclerview_message">You\'ve not added Medication</string>
    <string name="prescription">Prescription</string>

</resources>
